RESOLVED FIXED305459
[WebXR|VisionOS] WebXR incorrect reports support for 'immersive-ar' sessions
https://bugs.webkit.org/show_bug.cgi?id=305459
Summary [WebXR|VisionOS] WebXR incorrect reports support for 'immersive-ar' sessions
Dan Glastonbury
Reported 2026-01-14 00:32:22 PST
navigator.xr.isSessionSupported() returns true when queried about Immersive AR, even though immersive AR is unsupported on VisionOS.
Attachments
Dan Glastonbury
Comment 1 2026-01-14 00:32:56 PST
Dan Glastonbury
Comment 2 2026-01-14 00:49:06 PST
EWS
Comment 3 2026-01-14 14:06:08 PST
Committed 305606@main (ecc285cdc592): <https://commits.webkit.org/305606@main> Reviewed commits have been landed. Closing PR #56549 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.