Cherry-pick ecc285cdc592. rdar://168176474

[WebXR] WebXR incorrectly reports support for 'immersive-ar' sessions
    https://bugs.webkit.org/show_bug.cgi?id=305459
    rdar://167724198

    Reviewed by Cameron McCormack

    navigator.xr.isSessionSupported() returns true when queried about Immersive AR,
    even though immersive AR is unsupported on VisionOS. This is because
    SessionFeature::Layers is unconditionally appended to deviceInfo.arFeatures in
    XRDeviceInfo constructor.

    An empty features array signals that the entire feature is unavailable, so only
    add SessionFeature::Layers when deviceInfo.arFeatures is not empty fixes
    isSessionSupported() supriously reporting Immersive AR is supported.

    * Source/WebKit/Shared/XR/XRDeviceProxy.cpp:
    (WebKit::XRDeviceProxy::XRDeviceProxy):

    Canonical link: https://commits.webkit.org/305606@main

Identifier: 305413.27@safari-7624-branch